--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </section>
 
       <!--Секция интро-->
-      <section class="intro container">
+      <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол,
         чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и
@@ -40,11 +40,11 @@
         их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места,
         достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li>Часовых поясов 11</li>
-          <li>Объектов природного наследия ЮНЕСКО 12</li>
-          <li>Объектов культурного наследия ЮНЕСКО 16</li>
-          <li>Природных заповедников 105</li>
-          <li>Аэропортов 241</li>
+          <li>Часовых поясов <span class="intro__number">11</span></li>
+          <li>Объектов природного наследия ЮНЕСКО <span class="intro__number">12</span></li>
+          <li>Объектов культурного наследия ЮНЕСКО <span class="intro__number">16</span></li>
+          <li>Природных заповедников <span class="intro__number">105</span></li>
+          <li>Аэропортов <span class="intro__number">241</span></li>
         </ul>
       </section>
 
@@ -65,7 +65,7 @@
       </section>
 
       <!--Сексция о природе-->
-      <section class="places container">
+      <section class="places">
         <div class="place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
@@ -81,9 +81,7 @@
             мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
           </div>
         </div>
-      </section>
 
-      <section class="places container">
         <div class="place">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
@@ -101,9 +99,7 @@
             в Мурманск.</p>
           </div>
         </div>
-      </section>
 
-      <section class="places container">
         <div class="place">
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
@@ -120,9 +116,7 @@
             Алтайского края.</p>
           </div>
         </div>
-      </section>
 
-      <section class="places container">
         <div class="place">
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
@@ -139,9 +133,7 @@
             миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
           </div>
         </div>
-      </section>
 
-      <section class="places container">
         <div class="place">
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
